--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
+    "@types/marked": "^0.7.4",
     "axios": "^0.19.0",
     "clsx": "^1.0.4",
     "just-camel-case": "^4.0.2",
     "just-snake-case": "^1.1.0",
+    "marked": "^1.1.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2"
