--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
     "@types/marked": "^0.7.4",
+    "@types/react-tagsinput": "^3.19.7",
     "axios": "^0.19.0",
     "clsx": "^1.0.4",
     "just-camel-case": "^4.0.2",
@@ -14,7 +15,8 @@
     "marked": "^1.1.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "react-tagsinput": "^3.19.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.4",
@@ -30,7 +32,7 @@
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.5",
-    "css-loader": "^3.2.0",
+    "css-loader": "^3.5.3",
     "dotenv-webpack": "^1.7.0",
     "eslint": "^6.7.1",
     "eslint-config-airbnb": "^18.0.1",
